# ag-example

./: CMakeLists.txt  README.md  configure.sh
src/: main.c  main.ccn
src/equations/: eq_binop.c  eq_leaf.c  eq_prog.c
src/print/: print.c
